# CTikz_GUI

./: .gitignore  CMakeLists.txt  Info.plist  README.md  build.sh  info.txt
cmake/: copy_compile_commands.cmake
include/: test.hpp
src/: CMakeLists.txt  main.cpp  test.cpp
